# imgui-sdl2-opengl3-starter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: compile-linux.yml
patch/sdl2/: mingw-windows-devices.patch
src/: app.cpp  app.h  main.cpp
